@@ -330,6 +330,7 @@ namespace libtorrent
 		, m_available_free_upload(0)
 		, m_num_connect_candidates(0)
 		, m_num_seeds(0)
+		, m_finished(false)
 	{ TORRENT_ASSERT(t); }
 
 	// disconnects and removes all peers that are now filtered
@@ -375,7 +376,7 @@ namespace libtorrent
 		if (m_torrent->has_picker())
 			m_torrent->picker().clear_peer(&i->second);
 		if (i->second.seed) --m_num_seeds;
-		if (is_connect_candidate(i->second, m_torrent->is_finished()))
+		if (is_connect_candidate(i->second, m_finished))
 			--m_num_connect_candidates;
 		if (m_round_robin == i) ++m_round_robin;
 
@@ -405,11 +406,10 @@ namespace libtorrent
 		iterator candidate = m_peers.end();
 
 		int min_reconnect_time = m_torrent->settings().min_reconnect_time;
-		bool finished = m_torrent->is_finished();
 		address external_ip = m_torrent->session().external_address();
 
 		// don't bias any particular peers when seeding
-		if (finished || external_ip == address())
+		if (m_finished || external_ip == address())
 		{
 			// set external_ip to a random value, to
 			// radomize which peers we prefer
@@ -456,7 +456,7 @@ namespace libtorrent
 			if (pe.connection == 0
 				&& pe.connected != min_time()
 				&& (!pe.banned || now - pe.connected > hours(2))
-				&& !is_connect_candidate(pe, finished)
+				&& !is_connect_candidate(pe, m_finished)
 				&& m_peers.size() >= m_torrent->settings().max_peerlist_size * 0.9)
 			{
 				erase_peer(m_round_robin++);
@@ -465,7 +465,7 @@ namespace libtorrent
 
 			++m_round_robin;
 
-			if (!is_connect_candidate(pe, finished)) continue;
+			if (!is_connect_candidate(pe, m_finished)) continue;
 
 			if (candidate != m_peers.end()
 				&& !compare_peer(candidate->second, pe, external_ip)) continue;
@@ -701,11 +701,11 @@ namespace libtorrent
 		{
 			TORRENT_ASSERT(m_peers.count(p->addr) == 1);
 		}
-		bool was_conn_cand = is_connect_candidate(*p, m_torrent->is_finished());
+		bool was_conn_cand = is_connect_candidate(*p, m_finished);
 		p->port = port;
 		p->source |= src;
 
-		if (was_conn_cand != is_connect_candidate(*p, m_torrent->is_finished()))
+		if (was_conn_cand != is_connect_candidate(*p, m_finished))
 		{
 			m_num_connect_candidates += was_conn_cand ? -1 : 1;
 			if (m_num_connect_candidates < 0) m_num_connect_candidates = 0;
@@ -791,12 +791,12 @@ namespace libtorrent
 #endif
 			i->second.inet_as = ses.lookup_as(as);
 #endif
-			if (is_connect_candidate(i->second, m_torrent->is_finished()))
+			if (is_connect_candidate(i->second, m_finished))
 				++m_num_connect_candidates;
 		}
 		else
 		{
-			bool was_conn_cand = is_connect_candidate(i->second, m_torrent->is_finished());
+			bool was_conn_cand = is_connect_candidate(i->second, m_finished);
 
 			i->second.type = peer::connectable;
 
@@ -976,14 +976,15 @@ namespace libtorrent
 		TORRENT_ASSERT(!p->second.connection);
 		TORRENT_ASSERT(p->second.type == peer::connectable);
 
-		TORRENT_ASSERT(is_connect_candidate(p->second, m_torrent->is_finished()));
+		TORRENT_ASSERT(m_finished == m_torrent->is_finished());
+		TORRENT_ASSERT(is_connect_candidate(p->second, m_finished));
 		if (!m_torrent->connect_to_peer(&p->second))
 		{
 			++p->second.failcount;
 			return false;
 		}
 		TORRENT_ASSERT(p->second.connection);
-		TORRENT_ASSERT(!is_connect_candidate(p->second, m_torrent->is_finished()));
+		TORRENT_ASSERT(!is_connect_candidate(p->second, m_finished));
 		--m_num_connect_candidates;
 		return true;
 	}
@@ -1021,7 +1022,7 @@ namespace libtorrent
 //			p->connected = time_now();
 		}
 
-		if (is_connect_candidate(*p, m_torrent->is_finished()))
+		if (is_connect_candidate(*p, m_finished))
 			++m_num_connect_candidates;
 
 		// if the share ratio is 0 (infinite), the
@@ -1056,10 +1057,13 @@ namespace libtorrent
 	{
 		m_num_connect_candidates = 0;
 		const bool is_finished = m_torrent->is_finished();
+		if (is_finished == m_finished) return;
+
+		m_finished = is_finished;
 		for (const_iterator i = m_peers.begin();
 			i != m_peers.end(); ++i)
 		{
-			m_num_connect_candidates += is_connect_candidate(i->second, is_finished);
+			m_num_connect_candidates += is_connect_candidate(i->second, m_finished);
 		}
 	}
 
@@ -1260,7 +1264,7 @@ namespace libtorrent
 
 #ifndef TORRENT_DISABLE_GEO_IP
 		// don't bias fast peers when seeding
-		if (!m_torrent->is_finished() && m_torrent->session().has_asnum_db())
+		if (!m_finished && m_torrent->session().has_asnum_db())
 		{
 			int lhs_as = lhs.inet_as ? lhs.inet_as->second : 0;
 			int rhs_as = rhs.inet_as ? rhs.inet_as->second : 0;
